@@ -1,15 +1,0 @@
-﻿using Microsoft.Extensions.DependencyInjection;
-using Microsoft.Extensions.Diagnostics.HealthChecks;
-
-namespace Prometheus.HealthChecks
-{
-    public static class HealthCheckBuilderExtensions
-    {
-        public static IHealthChecksBuilder ForwardToPrometheus(this IHealthChecksBuilder builder)
-        {
-            builder.Services.AddSingleton<IHealthCheckPublisher, HealthCheckPublisher>();
-
-            return builder;
-        }
-    }
-}
