@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Nuspec\Merge-ReleaseNotes.ps1" />
+    <None Include="Nuspec\prometheus-net.AspNetCore.HealthChecks.nuspec" />
     <None Include="Nuspec\prometheus-net.AspNetCore.nuspec" />
     <None Include="Nuspec\prometheus-net.NetFramework.AspNet.nuspec" />
     <None Include="Nuspec\prometheus-net.nuspec" />
