@@ -31,6 +31,10 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Prometheus.NetFramework.Asp
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Tester.NetFramework.AspNet", "Tester.NetFramework.AspNet\Tester.NetFramework.AspNet.csproj", "{1C13A89A-563E-4C4C-83F9-0DCCCFFDFA86}"
 EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Prometheus.AspNetCore.HealthChecks", "Prometheus.AspNetCore.HealthChecks\Prometheus.AspNetCore.HealthChecks.csproj", "{4B630AF4-71AD-4CF1-AD4E-D0608B426109}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Tester.AspNetCore.HealthChecks", "Tester.AspNetCore.HealthChecks\Tester.AspNetCore.HealthChecks.csproj", "{7A0E037C-501E-4FF5-BEEC-0132C809AF67}"
+EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Tests.NetCore3", "Tests.NetCore3\Tests.NetCore3.csproj", "{D3687459-A188-4DF1-B6BD-3257760E96F6}"
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Prometheus.Grpc", "Prometheus.Grpc\Prometheus.Grpc.csproj", "{86943076-6025-49F3-AC6D-6D63142364F7}"
@@ -83,6 +87,14 @@ Global
 		{1C13A89A-563E-4C4C-83F9-0DCCCFFDFA86}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{1C13A89A-563E-4C4C-83F9-0DCCCFFDFA86}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{1C13A89A-563E-4C4C-83F9-0DCCCFFDFA86}.Release|Any CPU.Build.0 = Release|Any CPU
+		{4B630AF4-71AD-4CF1-AD4E-D0608B426109}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{4B630AF4-71AD-4CF1-AD4E-D0608B426109}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{4B630AF4-71AD-4CF1-AD4E-D0608B426109}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{4B630AF4-71AD-4CF1-AD4E-D0608B426109}.Release|Any CPU.Build.0 = Release|Any CPU
+		{7A0E037C-501E-4FF5-BEEC-0132C809AF67}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{7A0E037C-501E-4FF5-BEEC-0132C809AF67}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{7A0E037C-501E-4FF5-BEEC-0132C809AF67}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{7A0E037C-501E-4FF5-BEEC-0132C809AF67}.Release|Any CPU.Build.0 = Release|Any CPU
 		{86943076-6025-49F3-AC6D-6D63142364F7}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{86943076-6025-49F3-AC6D-6D63142364F7}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{86943076-6025-49F3-AC6D-6D63142364F7}.Release|Any CPU.ActiveCfg = Release|Any CPU
