@@ -1,3 +1,4 @@
+- Added ASP.NET Core health check publisher for publishing metrics on health check status. #203 #209
 - Fixed hang in ASP.NET Web API exporter. #215
 - Fixed ASP.NET Web API exporter exporting metrics from the wrong registry. #217
 - Reduced memory use in MetricPusher implementation. Inspired by #208
